--- a/collections_test.html
+++ b/collections_test.html
@@ -28,7 +28,7 @@
       _.each({one: 1, two: 2, three: 3}, function(element, idx, context) {
         console.log('index = ' + idx + ', element = ' + element + ', context = ' + JSON.stringify(context));
       });
-      
+
       // context는 iterator function에서 this로 참조되어진다.
       console.log('※ test context...');
       var someOtherArray = ['one','two', 'three'];
@@ -50,12 +50,12 @@
         console.log(name + ' => ' + this[name]);
       }, person.friends);
     });
-    
-  
+
+
 
   //-->
   </script>
  </body>
-</html><style type="text/css">
-  
-</style>
+</html>
+
+
